--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-search": "^2.0.0",
     "next": "12.0.10",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
