--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
-    "theme_color": "#3579f6",
-    "background_color": "#ffffff",
+    "theme_color": "#ede9d5",
+    "background_color": "#ede9d5",
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "Next-PWA",
-    "short_name": "Next-PWA",
-    "description": "A Demo for Next-PWA",
+    "name": "Library",
+    "short_name": "Library",
+    "description": "The 54th Dimension Library App",
     "icons": [
         {
             "src": "/icon-192x192.png",
