--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "^3.16.1",
     "sass": "^1.62.1"
   },
   "devDependencies": {
