--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,6 @@
 {
+    "theme_color": "#ede9d5",
+    "background_color": "#ede9d5",
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
